devops/example-k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: iot-server-demo
  name: iot-server-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iot-server-demo
  template:
    metadata:
      labels:
        run: iot-server-demo
    spec:
      containers:
        - image: navicore/iot-server-demo
          name: iot-server-demo
          imagePullPolicy: Always
