devops/example-k8s/read-kafka-write-eventhubs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: read-kafka-write-eventhubs-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: read-kafka-write-eventhubs
        version: v1
    spec:
      containers:
        - name: read-kafka-write-eventhubs
          image: navicore/akka-eventhubs-kafka:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
