devops/example-k8s/seed.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    run: iot-server-demo-seed
  name: iot-server-demo-seed
spec:
  serviceName: iot-server-demo-seed
  replicas: 2
  selector:
    matchLabels:
      run: iot-server-demo-seed
  template:
    metadata:
      labels:
        run: iot-server-demo-seed
    spec:
      containers:
      - name: iot-server-demo-seed
        image: navicore/iot-server-demo
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "HOST_NAME=${POD_NAME}.iot-server-demo-seed java -jar /app/IotServerDemo.jar"]
        livenessProbe:
          tcpSocket:
            port: 2551
        ports:
        - containerPort: 2551
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
