devops/example-k8s/streamer.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    run: iot-server-demo-streamer
  name: iot-server-demo-streamer
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iot-server-demo-streamer
  template:
    metadata:
      labels:
        run: iot-server-demo-streamer
    spec:
      containers:
      - name: iot-server-demo-streamer
        image: navicore/iot-server-demo:0.1.79
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 2551
        ports:
        - containerPort: 2551
          protocol: TCP
