devops/example-k8s/worker.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    run: iot-server-demo-worker
  name: iot-server-demo-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      run: iot-server-demo-worker
  template:
    metadata:
      labels:
        run: iot-server-demo-worker
    spec:
      containers:
      - name: iot-server-demo-worker
        image: navicore/iot-server-demo
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 2551
        ports:
        - containerPort: 2551
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
