devops/example-k8s/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-server-demo-ingress
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
    name: http
  selector:
    run: iot-server-demo-ingress
  clusterIP: None
